test/resources/testcontents/testing/saker/build/tests/tasks/script/InvalidDefaultsFileTest/nondefaultsfile.build
defaults(
	example.echo
	Input: abc
)

build(
	out val = 123
) {

}